Last modification in Readme.md

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://mehdiboutab.github.io/nike",
+  "homepage": "https://mehdiboutab.github.io/Nike",
   "name": "nike",
   "private": true,
   "version": "0.0.0",
